compiler/tools/fpp-check/test/connection_pattern/undef_target.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/undef_target.fpp:10.5
    c
    ^
error: cannot find symbol `c`
note: looking for a component instance here
